Thu Dec 08 03:39:25 GMT 2005  Olly Betts <olly@survex.com>

	* python/extra.i,python/util.i: Tweak layout for better readability;
	  Update FSF address.
	* python/extra.i: Add vim modeline.

Thu Dec 08 02:05:13 GMT 2005  Olly Betts <olly@survex.com>

	* php/docs/examples/simpleindex.php,
	  php/docs/examples/simplesearch.php: Add a more useful error message
	  if a database can't be opened; Fix inconsistent whitespace; Update
	  FSF address.

Thu Dec 08 01:58:04 GMT 2005  Olly Betts <olly@survex.com>

	* INSTALL: Improved phrasing.
	* NEWS: Added draft entry for next release.

Wed Dec 07 02:46:53 GMT 2005  Olly Betts <olly@survex.com>

	* php/docs/bindings.html: Fix typo.

Wed Dec 07 02:42:51 GMT 2005  Olly Betts <olly@survex.com>

	* php/docs/bindings.html: Fix typo; note that SWIG doesn't currently
	  support proxy classes in PHP5.

Wed Nov 30 00:22:33 GMT 2005  Olly Betts <olly@survex.com>

	* java/README,java/native/Enquire.cc,java/org/xapian/Enquire.java:
	  Wrap optional second parameter (query length) to
	  Enquire::set_query().

Tue Nov 29 04:31:44 GMT 2005  Olly Betts <olly@survex.com>

	* README: Improved.

Tue Nov 29 04:11:18 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac,php/Makefile.am: Bump required SWIG version to 1.3.26
	  and drop the special requirement for 1.3.22 for PHP (hurrah!)

Tue Nov 29 03:46:40 GMT 2005  Olly Betts <olly@survex.com>

	* php/Makefile.am,php/php.ini: Instead of "$(PHP) -c $(srcdir)" and
	  having an empty php.ini in srcdir (which we were failing to
	  distribute anyway), use "$(PHP) -n" which tells PHP not to use any
	  php.ini file.

Tue Nov 29 00:48:06 GMT 2005  Olly Betts <olly@survex.com>

	* README: Updated list of languages SWIG supports.

Sun Oct 02 14:19:20 BST 2005  Olly Betts <olly@survex.com>

	* Makefile.am: Fixed "php4" -> "php" in DIST_SUBDIRS.

Sun Oct 02 00:15:06 BST 2005  Olly Betts <olly@survex.com>

	* INSTALL,configure.ac: Add -lstdc++ to XAPIAN_LIBS if we're using